Fixed issue with footer spacing on all content pages and re named wire frame file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@
 .footer-text {
     font-family: "Roboto" sans-serif;
     font-weight: 200;
-    font-size: 13px;
+    font-size: 15px;
     text-align: right;
     padding-top: 60px;
 }
@@ -144,11 +144,11 @@
 }
 
 .social-links li a i {
-    width: 32px;
-    height: 32px;
-    padding: 12px 0;
+    width: 40px;
+    height: 40px;
+    padding: 18px 0;
     border-radius: 50%;
-    font-size: 13px;
+    font-size: 18px;
     line-height: 7px;
     text-align: center;
     color: #fafafafa;
@@ -158,6 +158,7 @@
 .social-links {
     padding-top: 20px;
 }
+
 /* ------------------------------------------------Footer */
 
 /* ------------------------------------------------Wedding HTML */
